v1.11.4
- Updated language files from Transifex
- Minor changes to conform with C++11

v1.11.3
- Updated language files from Transifex

v1.11.2
- New method to handle read ahead (live playback)

v1.10.1
- Options to disable channel icons and recordings or fanart images

v1.10.0
- jansson 2.7: fix compilation on ios8/arm64
- Cleaned cache by max age
- Improves loading of channels and recordings
- Adding WS API Security Pin parameter
- Adding episode info (subtitle) to EPG title

v1.9.28
- Updated language files from Transifex

v1.9.27
- change library name to Kodi

v1.9.26
- fixed deadlock when activating the addon on some darwin (osx, ios) runtimes

v1.9.25
- Handle GUI events to activate/deactivate power saving mode
- Don't send WOL when power saving mode is activated
- Don't block shutdown when power saving mode is activated
- Handle hang: Always retry protocol connection after hang
- Handle hang: Reconnect event handler after hanging of control connection

v1.9.24
- Block backend shutdown by default: New setting
- Fix refreshing recordings and schedules on wake up
- Updated language files from Transifex

v1.9.23
- Handles version of services
- Allow HTTP redirection to get slave previews
- New format for program UID string
- demuxer: optimizing, fix PES header
- Fix category override
- Transfer sub channel number

v1.9.22
- Fix identifier for DVB-SUBTITLE
- Add setting to enable or disable EDL functionnality
- Add setting to configure grouping for recordings
- Load EIT categories from customized user file
- Merge channels with same source ID
- Fix codec infos after stream parsing (AAC LATM)
- Fix crash when trying to show recording from unattainable slave backend

v1.9.21
- Updated to API v1.9.2

v1.9.20
- Detect audio codec AAC LATM or AAC ADTS by parsing
- Enable EDL for MPEG-TS stream
- Fix timeout: 60 sec to hang up
- Fix refreshing artwork after program update event
- Send wol packet magic to wake up backend on startup or not connected

v1.9.19